--- a/source/_posts/初始化.md
+++ b/source/_posts/初始化.md
@@ -1,4 +1,5 @@
-title: 题目
+### title: 题目
+
 author: LZH
 categories: ["种类"]
 date: 2022-9-26 14:57:48
@@ -9,4 +10,8 @@ tags:
 ---
 
 1234
+
+## 添加
+
+# 
 
