添加sonar部署 Signed-off-by: lizihan <451447840@qq.com>

--- a/source/_posts/技术文档/打包环境构建.md
+++ b/source/_posts/技术文档/打包环境构建.md
@@ -16,7 +16,7 @@ tags:
 ### 1.安装go环境
 
 ```shell
-yum install go
+yum -y install go
 ```
 
 
@@ -47,7 +47,7 @@ yum install -y maven
         <name>Nexus aliyun</name>
         <url>http://maven.aliyun.com/nexus/content/groups/public</url>
     </mirror>
-        <mirror>
+    <mirror>
       <id>mirrorId</id>
       <mirrorOf>repositoryId</mirrorOf>
       <name>Human Readable Name for this Mirror.</name>
