添加部分描述：gitrunner添加sonar Signed-off-by: lizihan <451447840@qq.com>

--- a/source/_posts/技术文档/打包环境构建.md
+++ b/source/_posts/技术文档/打包环境构建.md
@@ -98,3 +98,46 @@ build:
 #      - "target/jwcloud.xjar"
 ```
 
+
+
+## 优化：增加sonar扫描
+
+参照 [sonar环境部署.md](sonar环境部署.md) 中maven-sonar 插件配置maven和修改脚本
+
+命令在最后加上sonar:sonar即可
+
+如下
+
+```yml
+variables:
+  MAVEN_OPTS: "-Dmaven.repo.local=../.m2/repository"
+  PACKAGE_PATH: "/data/lzh/package/jwcloud-test/"
+cache:
+  paths:
+    - ../.m2/repository
+stages:
+  - build
+# 打包镜像
+build:
+  stage: build
+  only:
+    - master
+  script:
+    - mvn $MAVEN_OPTS clean package -Dxjar.password=123123 '-Dmaven.test.skip=true' sonar:sonar
+    - cd target
+    - export GOOS=windows && go build xjar.go
+    - sudo mkdir -p $PACKAGE_PATHservice/
+    - sudo mv -f xjar.exe ${PACKAGE_PATH}service/jwcloud.exe
+    - sudo mv -f *.xjar ${PACKAGE_PATH}service/jwcloud.xjar
+#  artifacts:
+#    paths:
+#      - "target/jwcloud.exe"
+#      - "target/jwcloud.xjar"
+```
+
+
+
+
+
+
+
